Add plants edit feature and change sql queries to prevent sql injection

--- a/PTS/Views/Account/LoginRegister.cshtml
+++ b/PTS/Views/Account/LoginRegister.cshtml
@@ -87,7 +87,7 @@
 
                                         <input type="submit" name="LGform1" class="btnContactSubmit" value="Login" />
 
-                                        <a href="for.html" class="btnForgetPwd" value="Login">Forgot?</a>
+                                        @*<a href="for.html" class="btnForgetPwd" value="Login">Forgot?</a>*@
 
                                     </div>
 
